chỉnh tiếng Việt + file DanhGia